--- a/index.html.html
+++ b/index.html.html
@@ -142,7 +142,7 @@
             <h1>رجل المنشار</h1>
             <p>مانجا من تأليف تاتسوكي فوجيموتو تحكي قصة دنجي الشاب الفقير الذي يصبح صياد شياطين بعد أن يدمج مع شيطان المنشار بوتشيتا. قصة مليئة بالإثارة والعنف والكوميديا السوداء.</p>
         </div>
-        <img src="images/chainsaw-man-cover.jpg" alt="رجل المنشار" class="manga-cover" 
+        <img src="chainsaw-man-cover.jpg" alt="رجل المنشار" class="manga-cover" 
              onclick="window.location.href='selection.html'">
     </div>
 </body>
