--- a/characters.html
+++ b/characters.html
@@ -95,7 +95,7 @@
                 <!-- دنجي -->
                 <div class="character-card">
                     <div class="character-image">
-                        <img src="images/denji.jpg" alt="دنجي">
+                        <img src="denji.jpg" alt="دنجي">
                     </div>
                     <div class="character-info">
                         <h2>دنجي <span class="jp-name">(デンジ)</span></h2>
@@ -110,7 +110,7 @@
                 <!-- ماكيما -->
                 <div class="character-card">
                     <div class="character-image">
-                        <img src="images/makima.jpg" alt="ماكيما">
+                        <img src="makima.jpg" alt="ماكيما">
                     </div>
                     <div class="character-info">
                         <h2>ماكيما <span class="jp-name">(マキマ)</span></h2>
@@ -125,7 +125,7 @@
                 <!-- باور -->
                 <div class="character-card">
                     <div class="character-image">
-                        <img src="images/power.jpg" alt="باور">
+                        <img src="power.jpg" alt="باور">
                     </div>
                     <div class="character-info">
                         <h2>باور <span class="jp-name">(パワー)</span></h2>
@@ -140,7 +140,7 @@
                 <!-- أكي -->
                 <div class="character-card">
                     <div class="character-image">
-                        <img src="images/aki.jpg" alt="أكي">
+                        <img src="/aki.jpg" alt="أكي">
                     </div>
                     <div class="character-info">
                         <h2>أكي هايازاوا <span class="jp-name">(早川アキ)</span></h2>
