--- a/devils.html
+++ b/devils.html
@@ -96,7 +96,7 @@
                 <!-- شيطان المنشار -->
                 <div class="devil-card">
                     <div class="devil-image">
-                        <img src="images/chainsaw-devil.jpg" alt="شيطان المنشار">
+                        <img src="chainsaw-devil.jpg" alt="شيطان المنشار">
                     </div>
                     <div class="devil-info">
                         <h2>شيطان المنشار <span class="jp-name">(チェンソーの悪魔)</span></h2>
@@ -113,7 +113,7 @@
                 <!-- شيطان المسدس -->
                 <div class="devil-card">
                     <div class="devil-image">
-                        <img src="images/gun-devil.jpg" alt="شيطان المسدس">
+                        <img src="gun-devil.jpg" alt="شيطان المسدس">
                     </div>
                     <div class="devil-info">
                         <h2>شيطان المسدس <span class="jp-name">(銃の悪魔)</span></h2>
@@ -130,7 +130,7 @@
                 <!-- شيطان الدم -->
                 <div class="devil-card">
                     <div class="devil-image">
-                        <img src="images/blood-devil.jpg" alt="شيطان الدم">
+                        <img src="blood-devil.jpg" alt="شيطان الدم">
                     </div>
                     <div class="devil-info">
                         <h2>شيطان الدم <span class="jp-name">(血の悪魔)</span></h2>
@@ -147,7 +147,7 @@
                 <!-- شيطان المستقبل -->
                 <div class="devil-card">
                     <div class="devil-image">
-                        <img src="images/future-devil.jpg" alt="شيطان المستقبل">
+                        <img src="future-devil.jpg" alt="شيطان المستقبل">
                     </div>
                     <div class="devil-info">
                         <h2>شيطان المستقبل <span class="jp-name">(未来の悪魔)</span></h2>
